--- a/infrastructure/ansible/panda/defaults/main.yml
+++ b/infrastructure/ansible/panda/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 repository_url: http://192.168.44.44:8081/artifactory/libs-snapshot-local
 username: admin
-password: pandapass
+password: pandapass1P
 artifact_name: ./application.jar
